[gd_scene load_steps=5 format=3 uid="uid://bieegw68igah3"]

[ext_resource type="Script" uid="uid://2gd0kljdd5jv" path="res://scenes/map/book/book.gd" id="1_4oemj"]
[ext_resource type="Texture2D" uid="uid://cy2n3b4lfa2bi" path="res://scenes/map/book/book_image_13.png" id="2_gkogt"]
[ext_resource type="Texture2D" uid="uid://q4fq1ul2jhkl" path="res://scenes/map/book/book_middle.png" id="3_rebn7"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gkogt"]

[node name="Book" type="Node2D"]
script = ExtResource("1_4oemj")

[node name="book" type="Sprite2D" parent="."]
texture = ExtResource("2_gkogt")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-3, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-19, 21)
rotation = -2.15723
scale = Vector2(4, 4)
shape = SubResource("CapsuleShape2D_gkogt")

[node name="LibroUI" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="LibroUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.10352e-05
offset_top = 3.05176e-05
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.666667)

[node name="Control" type="Control" parent="LibroUI"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.5, 2.5)

[node name="TextureRect" type="TextureRect" parent="LibroUI/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -120.0
offset_right = 240.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_rebn7")

[node name="RichTextLabel" type="RichTextLabel" parent="LibroUI/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_body_exited"]
